kubernetes/ra-webapp.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ra-web-queue-deployment
  labels:
    app: ra-web-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ra-web-queue
  template:
    metadata:
      labels:
        app: ra-web-queue
    spec:
      containers:
        - name: ra-web-queue-image
          image: ${DOCKER_REGISTRY_IP_PORT}/${IMAGE_NAME}:${BUILD_ID}
          command: [ "bundle", "exec", "sidekiq", "-t", "25", "-C", "config/sidekiq.yml" ]
          #lifecycle:
          #  postStart:
          #    exec:
          #      command: ["/bin/sh", "start.sh"]
          ports:
            - containerPort: 3000


---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ra-web-deployment
  labels:
    app: ra-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ra-web
  template:
    metadata:
      labels:
        app: ra-web
    spec:
      containers:
        - name: ra-web-image
          image: ${DOCKER_REGISTRY_IP_PORT}/${IMAGE_NAME}:${BUILD_ID}
          #lifecycle:
          #  postStart:
          #    exec:
          #      command: ["/bin/sh", "-c", "./start.sh"]
          ports:
            - containerPort: 3000
        
---

kind: Service
apiVersion: v1
metadata:
  name: ra-web-service
spec:
  #type: LoadBalancer
  #type: NodePort 
  selector:
    app: ra-web
  ports:
  - port: 3000
  #  nodePort: 30006
